--- a/packages/pixi/package.json
+++ b/packages/pixi/package.json
@@ -61,6 +61,7 @@
   },
   "dependencies": {
     "@robotlegsjs/core": "^3.0.0",
+    "@robotlegsjs/eventemitter3": "^3.0.0",
     "tslib": "^2.3.0"
   },
   "peerDependencies": {
@@ -69,6 +70,14 @@
   },
   "devDependencies": {
     "@jsdevtools/coverage-istanbul-loader": "^3.0.5",
+    "@pixi/constants": "^6.3.2",
+    "@pixi/core": "^6.3.2",
+    "@pixi/display": "^6.3.2",
+    "@pixi/math": "^6.3.2",
+    "@pixi/runner": "^6.3.2",
+    "@pixi/settings": "^6.3.2",
+    "@pixi/ticker": "^6.3.2",
+    "@pixi/utils": "^6.3.2",
     "@rushstack/eslint-config": "^2.3.4",
     "@types/bluebird": "^3.5.36",
     "@types/chai": "^4.2.21",
