--- a/packages/pixi-signalmediator/package.json
+++ b/packages/pixi-signalmediator/package.json
@@ -58,11 +58,12 @@
     "tslib": "^2.3.0"
   },
   "peerDependencies": {
-    "pixi.js": "^5.0.0",
+    "pixi.js": "^6.0.0",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@jsdevtools/coverage-istanbul-loader": "^3.0.5",
+    "@robotlegsjs/eventemitter3": "^3.0.0",
     "@rushstack/eslint-config": "^2.3.4",
     "@types/bluebird": "^3.5.36",
     "@types/chai": "^4.2.21",
@@ -89,7 +90,7 @@
     "karma-sourcemap-writer": "^0.1.2",
     "karma-webpack": "^5.0.0",
     "mocha": "^9.0.2",
-    "pixi.js": "^5.2.1",
+    "pixi.js": "^6.3.2",
     "prettier": "^2.6.2",
     "puppeteer": "^10.1.0",
     "reflect-metadata": "^0.1.13",
